# pysmf

./: .gitignore  LICENSE  MANIFEST.in  README.md  meson.build  pyproject.toml  setup.py
src/: smf.pyx
test/: test_version.py
