[project]
name = "pysmf"
description = 'A Python module for standard MIDI files, based on libsmf'
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [{name = "Dominic Sacré", email = "dominic.sacre@gmx.de"},]
maintainers = [{name = "George Rawlinson", email = "george@rawlinson.net.nz"},]
dynamic = ["version"] # version specified in meson.build

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
homepage = "https://github.com/mididings/pysmf"

[build-system]
build-backend = "mesonpy"
requires = [
  "meson-python",
  "cython",
]
